--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
 <body>
   <div class="container">
     <div class="row">
-      <nav class="navigation title title--black">
+      <nav class="navigation title title--black col-xl-2">
         <h1 class="title-main">title-main</h1>
       </nav>
-      <header class="header">
+      <header class="header col-xl-10">
         <ul class="list list-icon">
           <li class="list__element list__element--horizontal list__element--before list__element--large"><a class="link--list" href="#"><i class="icon-wallet icon icon--large"></i>1500 $</a></li>
           <li class="list__element list__element--horizontal list__element--before list__element--large"><a class="link--list" href="#"><i class="icon-notification icon icon--large icon--after"></i></a></li>
@@ -27,9 +27,9 @@
       </header>
     </div>
     <div class="row">
-      <aside class="aside">
-        <div class="row after-row after-row--align-left">
-          <ul class="list list-menu list-menu--align-left">
+      <aside class="aside col-xl-2">
+        <div class="row after-row">
+          <ul class="list list-menu">
             <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-general icon"></i>General</a></li>
             <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-details icon"></i>Details</a></li>
             <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-links icon"></i>Links</a></li>
@@ -40,13 +40,24 @@
           </ul>
         </div>
       </aside>
-      <main class="main">
-        <section class="page">dfdfd</section>
-        <section class="page">dfdfd</section>
-        <section class="page">dfddf</section>
+      <main class="main col-xl-10">
+        <div class="page">www</div>
+        <div class="page">ddd</div>
+        <div class="page">fff</div>
+        <div class="page">gggg</div>
+        <div class="page">gggg</div>
+        <div class="page">gggg</div>
+        <div class="page">gggg</div>
+        <div class="page">gggg</div>
+        <div class="page">gggg</div>
+        <div class="page">gggg</div>
       </main>
     </div>
   </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+  <script src="js/app.js"></script>
+
 </body>
 
 </html>
