--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../dist/css/style.css">
 </head>
 
-<body class="container container--gray">
+<body class="container-main">
 
   <div class="page">
 
