--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -12,7 +12,7 @@
 
 <body class="container-main">
 
-  <div class="page">
+  <div class="page active">
 
     <div class="row">
       <header class="title title--after">
@@ -40,7 +40,7 @@
 
   </div>
 
-  <div class="page">
+  <div class="page active">
     <div class="row">
       <header class="title title--after">
         <h2 class="title-page">Chapter 2. Text & Links </h2>
@@ -62,7 +62,7 @@
     </div>
   </div>
 
-  <div class="page">
+  <div class="page active">
     <div class="row">
       <header class="title">
         <h2 class="title-page title--after">Chapter 3. Icons </h2>
@@ -85,7 +85,7 @@
 
   </div>
 
-  <div class="page">
+  <div class="page active">
     <div class="row">
       <header class="title title--after">
         <h2 class="title-page">Chapter 4. List</h2>
@@ -130,7 +130,7 @@
     </div>
   </div>
 
-  <div class="page">
+  <div class="page active">
     <div class="row">
       <header class="title title--after">
         <h2 class="title-page">Chapter 5. Table</h2>
@@ -209,7 +209,7 @@
     </div>
   </div>
 
-  <div class="page">
+  <div class="page active">
     <div class="row">
       <header class="title title--after">
         <h2 class="title-page">Chapter 6. Button</h2>
@@ -217,9 +217,12 @@
     </div>
 
     <div class="row">
-      <p class="button">Button</p>
-      <p class="button button--grey">Button</p>
-      <p class="button button--alternative">Button</p>
+      <form>
+          <button class="button">Button</button>
+          <button class="button button--grey">Button</button>
+          <button class="button button--alternative">Button</button>
+      </form>
+
     </div>
 
     <div class="row">
@@ -230,7 +233,7 @@
 
   </div>
 
-  <div class="page">
+  <div class="page active">
 
     <div class="row">
       <header class="title title--after">
