--- a/src/index.html
+++ b/src/index.html
@@ -42,13 +42,13 @@
       <nav class="navigation">
         <ul class="list list-icon">
           <li class="list__element list__element--horizontal list__element--before"><a class="link--list" href="#"><i
-                class="icon-wallet icon"></i>1500 $</a></li>
+                class="icon-wallet icon icon--landscape"></i>1500 $</a></li>
           <li class="list__element list__element--horizontal list__element--before"><a class="link--list" href="#"><i
-                class="icon-notification icon icon--after"></i></a></li>
+                class="icon-notification icon icon--after icon--landscape"></i></a></li>
           <li class="list__element list__element--horizontal list__element--before"><a class="link--list" href="#"><i
-                class="icon-profile icon"></i>Leonardo Di Caprio</a></li>
+                class="icon-profile icon icon--landscape"></i>Leonardo Di Caprio</a></li>
           <li class="list__element list__element--horizontal list__element--before"><a class="link--list" href="#"><i
-                class="icon-quit icon"></i></a></li>
+                class="icon-quit icon icon--landscape"></i></a></li>
         </ul>
       </nav>
       <div class="container-section">
@@ -61,14 +61,14 @@
           <div class="row row--after">
             <form class="input-wrapper">
               <div class="add-border">
-                <input type="date" class="input-wrapper__input input-wrapper__input--icon">
-                <input type="date" class="input-wrapper__input input-wrapper__input--icon">
+                <input type="date" class="input-wrapper__input input-wrapper__input--data-icon">
+                <input type="date" class="input-wrapper__input input-wrapper__input--data-icon">
               </div>
               <i class="icon-refresh icon icon--veritical icon--background-alternative"></i>
             </form>
           </div>
           <div class="row">
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
               <table class="table table--center table--no-top-border table--middle">
                 <tbody class="table-body">
                   <tr class="table-body__row">
@@ -82,7 +82,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
               <table class="table table--center table--no-top-border table--middle">
                 <tbody class="table-body">
                   <tr class="table-body__row">
@@ -98,7 +98,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-8 chart">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 chart">
               <div class="title">
                 <h3 class="title-section">Earnings chart</h3>
               </div>
@@ -115,8 +115,8 @@
           <div class="row row--after">
             <form class="input-wrapper">
               <div class="add-border">
-                <input name="date" type="date" class="input-wrapper__input input-wrapper__input--icon">
-                <input name="date" type="date" class="input-wrapper__input input-wrapper__input--icon">
+                <input name="date" type="date" class="input-wrapper__input input-wrapper__input--data-icon">
+                <input name="date" type="date" class="input-wrapper__input input-wrapper__input--data-icon">
               </div>
               <i class="icon-refresh icon icon--veritical icon--background-alternative"></i>
             </form>
@@ -329,7 +329,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="table-wrapper col-xs-10 col-sm-11 col-md-10">
+            <div class="table-wrapper col-xs-10 col-sm-11 col-md-10 col-lg-10">
               <table class="table table--center">
                 <tbody class="table-body">
                   <tr class="table-body__row">
@@ -441,7 +441,7 @@
               </div>
               <div class="input-wrapper">
                 <label class="input-wrapper__label">Password
-                  <input type="password" class="input-wrapper__input">
+                  <input type="password" class="input-wrapper__input input-wrapper__input--password-icon">
                 </label>
               </div>
               <div class="input-wrapper input-wrapper--after">
@@ -466,8 +466,8 @@
           <div class="row row--after">
             <form class="input-wrapper">
               <div class="add-border">
-                <input name="date" type="date" class="input-wrapper__input input-wrapper__input--icon">
-                <input name="date" type="date" class="input-wrapper__input input-wrapper__input--icon">
+                <input name="date" type="date" class="input-wrapper__input input-wrapper__input--data-icon">
+                <input name="date" type="date" class="input-wrapper__input input-wrapper__input--data-icon">
               </div>
               <i class="icon-refresh icon icon--veritical icon--background-alternative"></i>
             </form>
