upgrade_style_media

--- a/src/index.html
+++ b/src/index.html
@@ -42,13 +42,13 @@
       <nav class="navigation">
         <ul class="list list-icon">
           <li class="list__element list__element--horizontal list__element--before"><a class="link--list" href="#"><i
-                class="icon-wallet icon icon--landscape"></i>1500 $</a></li>
+                class="icon-wallet icon"></i>1500 $</a></li>
           <li class="list__element list__element--horizontal list__element--before"><a class="link--list" href="#"><i
-                class="icon-notification icon icon--after icon--landscape"></i></a></li>
+                class="icon-notification icon icon--after"></i></a></li>
           <li class="list__element list__element--horizontal list__element--before"><a class="link--list" href="#"><i
-                class="icon-profile icon icon--landscape"></i>Leonardo Di Caprio</a></li>
+                class="icon-profile icon"></i>Leonardo Di Caprio</a></li>
           <li class="list__element list__element--horizontal list__element--before"><a class="link--list" href="#"><i
-                class="icon-quit icon icon--landscape"></i></a></li>
+                class="icon-quit icon"></i></a></li>
         </ul>
       </nav>
       <div class="container-section">
