upgrade_media_style_menu_icons

--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -70,16 +70,16 @@
     </div>
 
     <div class="row">
-      <ul class="list list-icon">
-        <li class="list__element list__element--large"><i class="icon-wallet icon icon--large"></i></li>
-        <li class="list__element list__element--large"><i class="icon-notification icon"></i></li>
-        <li class="list__element list__element--large"><i class="icon-profile icon icon--small"></i></li>
+      <ul class="list list-icons">
+        <li class="list__element list__element--large"><i class="icon-wallet icons icons--large"></i></li>
+        <li class="list__element list__element--large"><i class="icon-notification icons"></i></li>
+        <li class="list__element list__element--large"><i class="icon-profile icons icons--small"></i></li>
       </ul>
     </div>
 
     <div class="row">
-      <ul class="list list-icon">
-        <li class="list__element list__element--large"><i class="icon-wallet icon icon--large icon--background-alternative"></i></li>
+      <ul class="list list-icons">
+        <li class="list__element list__element--large"><i class="icon-wallet icons icons--large icons--background-alternative"></i></li>
       </ul>
     </div>
 
@@ -94,28 +94,28 @@
 
     <div class="row after-row">
       <ul class="list list-menu">
-        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-general icon"></i>General</a></li>
-        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-details icon"></i>Details</a></li>
-        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-links icon"></i>Links</a></li>
-        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-banners icon"></i>Banners</a></li>
-        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-personaldata icon"></i>Personal data</a></li>
-        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-payout icon"></i>Payout</a></li>
-        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-postback icon"></i>Postback</a></li>
+        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-general icons"></i>General</a></li>
+        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-details icons"></i>Details</a></li>
+        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-links icons"></i>Links</a></li>
+        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-banners icons"></i>Banners</a></li>
+        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-personaldata icons"></i>Personal data</a></li>
+        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-payout icons"></i>Payout</a></li>
+        <li class="list__element list__element--background"><a href="#" class="link--list"><i class="icon-postback icons"></i>Postback</a></li>
       </ul>
     </div>
 
     <div class="row">
-      <ul class="list list-icon">
-        <li class="list__element list__element--horizontal list__element--before list__element--large"><a class="link--list" href="#"><i class="icon-wallet icon icon--large"></i>1500 $</a></li>
-        <li class="list__element list__element--horizontal list__element--before list__element--large"><a class="link--list" href="#"><i class="icon-notification icon icon--large icon--after"></i></a></li>
-        <li class="list__element list__element--horizontal list__element--before list__element--large"><a class="link--list" href="#"><i class="icon-profile icon icon--large"></i>Leonardo Di Caprio</a></li>
-        <li class="list__element list__element--horizontal list__element--before list__element--large"><a class="link--list" href="#"><i class="icon-quit icon icon--large"></i></a></li>
+      <ul class="list list-icons">
+        <li class="list__element list__element--horizontal list__element--before list__element--large"><a class="link--list" href="#"><i class="icon-wallet icons icons--large"></i>1500 $</a></li>
+        <li class="list__element list__element--horizontal list__element--before list__element--large"><a class="link--list" href="#"><i class="icon-notification icons icons--large icons--after"></i></a></li>
+        <li class="list__element list__element--horizontal list__element--before list__element--large"><a class="link--list" href="#"><i class="icon-profile icons icons--large"></i>Leonardo Di Caprio</a></li>
+        <li class="list__element list__element--horizontal list__element--before list__element--large"><a class="link--list" href="#"><i class="icon-quit icons icons--large"></i></a></li>
       </ul>
     </div>
 
     <div class="row">
       <ul class="list list-number">
-        <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#"><i class="icon-arrow-left icon icon--small"></i></a></li>
+        <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#"><i class="icon-arrow-left icons icons--small"></i></a></li>
         <li class="list__element list__element--horizontal list__element--hover list__element--active"><a class="link--list" href="#">1</a></li>
         <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#">2</a></li>
         <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#">3</a></li>
@@ -125,7 +125,7 @@
         <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#">7</a></li>
         <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#">8</a></li>
         <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#">9</a></li>
-        <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#"><i class="icon-arrow-right icon icon--small"></i></a></li>
+        <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#"><i class="icon-arrow-right icons icons--small"></i></a></li>
       </ul>
     </div>
   </div>
@@ -143,22 +143,22 @@
           <tr class="table-body__row">
             <td class="table-body__cell title-section">Home page</td>
             <td class="table-body__cell"><a class="link" href="#">http://www.homepage.com</a></td>
-            <td class="table-body__cell table-body__cell--right"><i class="icon-links icon icon--small icon--blue"></i><i class="icon-trash icon icon--small icon--blue"></i></td>
+            <td class="table-body__cell table-body__cell--right"><i class="icon-links icons icons--small icons--blue"></i><i class="icon-trash icons icons--small icons--blue"></i></td>
           </tr>
           <tr class="table-body__row">
             <td class="table-body__cell title-section">Currently offer</td>
             <td class="table-body__cell"><a class="link" href="#">http://currently.com</a></td>
-            <td class="table-body__cell table-body__cell--right"><i class="icon-links icon icon--small icon--blue"></i><i class="icon-trash icon icon--small icon--blue"></i></td>
+            <td class="table-body__cell table-body__cell--right"><i class="icon-links icons icons--small icons--blue"></i><i class="icon-trash icons icons--small icons--blue"></i></td>
           </tr>
           <tr class="table-body__row">
             <td class="table-body__cell title-section">Blurpix</td>
             <td class="table-body__cell"><a class="link" href="#">http://blurpix.com</a></td>
-            <td class="table-body__cell table-body__cell--right"><i class="icon-links icon icon--small icon--blue"></i><i class="icon-trash icon icon--small icon--blue"></i></td>
+            <td class="table-body__cell table-body__cell--right"><i class="icon-links icons icons--small icons--blue"></i><i class="icon-trash icons icons--small icons--blue"></i></td>
           </tr>
           <tr class="table-body__row">
             <td class="table-body__cell title-section">Your Site</td>
             <td class="table-body__cell"><a class="link" href="#">http://yoursite.com</a></td>
-            <td class="table-body__cell table-body__cell--right"><i class="icon-links icon icon--small icon--blue"></i><i class="icon-trash icon icon--small icon--blue"></i></td>
+            <td class="table-body__cell table-body__cell--right"><i class="icon-links icons icons--small icons--blue"></i><i class="icons-trash icons icons--small icons--blue"></i></td>
           </tr>
         </tbody>
       </table>
@@ -187,8 +187,8 @@
       <table class="table table--no-top-border">
         <thead class="table-head">
           <tr class="table-head__row">
-            <th class="table-head__cell title-section"><p class="table-head__cell--filter">column name<i class="icon-arrow-up table-head__icon icon icon--small"></i></p></th>
-            <th class="table-head__cell title-section"><p class="table-head__cell--filter">column name<i class="icon-arrow-up table-head__icon icon icon--small"></i></p></th>
+            <th class="table-head__cell title-section"><p class="table-head__cell--filter">column name<i class="icon-arrow-up table-head__icons icons icons--small"></i></p></th>
+            <th class="table-head__cell title-section"><p class="table-head__cell--filter">column name<i class="icon-arrow-up table-head__icons icons icons--small"></i></p></th>
           </tr>
         </thead>
         <tbody class="table-body">
@@ -227,7 +227,7 @@
 
     <div class="row">
       <p class="button button--orange">Button</p>
-      <p class="button button--large"><i class="icon-links icon icon--small"></i>Disable button</p>
+      <p class="button button--large"><i class="icon-links icons icons--small"></i>Disable button</p>
       <p class="button button--tabs">Color Tab</p>
     </div>
 
@@ -259,8 +259,8 @@
       <form class="input-wrapper">
         <label for="password" class="input-wrapper__label">password</label>
         <div class="add-border">
-          <i class="icon-password icon"></i>
-          <input name="password" placeholder="Password" type="password" class=" input-wrapper__input  input-wrapper__input--icon">
+          <i class="icon-password icons"></i>
+          <input name="password" placeholder="Password" type="password" class=" input-wrapper__input  input-wrapper__input--icons">
         </div>
       </form>
     </div>
@@ -269,9 +269,9 @@
       <form class="input-wrapper">
         <label for="date" class="input-wrapper__label input-wrapper__label--veritical">date</label>
         <div class="add-border">
-          <input name="date" type="date" class=" input-wrapper__input  input-wrapper__input--icon">
-          <input name="date" type="date" class=" input-wrapper__input  input-wrapper__input--icon">
-          <i class="icon-calendar icon"></i>
+          <input name="date" type="date" class=" input-wrapper__input  input-wrapper__input--icons">
+          <input name="date" type="date" class=" input-wrapper__input  input-wrapper__input--icons">
+          <i class="icon-calendar icons"></i>
         </div>
       </form>
     </div>
