--- a/src/index.html
+++ b/src/index.html
@@ -20,20 +20,20 @@
       </div>
       <div class="row after-row">
         <ul class="list list-menu">
-          <li class="list__element list__element--background"><a href="#" class="link--list" data-section="general"><i
+          <li class="list__element list__element--background"><a href="#" class="link link--list" data-section="general"><i
                 class="icon-general icons icons--menu" data-section="general"></i>General</a></li>
-          <li class="list__element list__element--background"><a href="#" class="link--list" data-section="details"><i
+          <li class="list__element list__element--background"><a href="#" class="link link--list" data-section="details"><i
                 class="icon-details icons icons--menu" data-section="details"></i>Details</a></li>
-          <li class="list__element list__element--background"><a href="#" class="link--list" data-section="links"><i
+          <li class="list__element list__element--background"><a href="#" class="link link--list" data-section="links"><i
                 class="icon-links icons icons--menu" data-section="links"></i>Links</a></li>
-          <li class="list__element list__element--background"><a href="#" class="link--list" data-section="banners"><i
+          <li class="list__element list__element--background"><a href="#" class="link link--list" data-section="banners"><i
                 class="icon-banners icons icons--menu" data-section="banners"></i>Banners</a></li>
-          <li class="list__element list__element--background"><a href="#" class="link--list"
+          <li class="list__element list__element--background"><a href="#" class="link link--list"
               data-section="personal_data"><i class="icon-personaldata icons icons--menu"
                 data-section="personal_data"></i>Personal data</a></li>
-          <li class="list__element list__element--background"><a href="#" class="link--list" data-section="payout"><i
+          <li class="list__element list__element--background"><a href="#" class="link link--list" data-section="payout"><i
                 class="icon-payout icons icons--menu" data-section="payout"></i>Payout</a></li>
-          <li class="list__element list__element--background"><a href="#" class="link--list" data-section="postback"><i
+          <li class="list__element list__element--background"><a href="#" class="link link--list" data-section="postback"><i
                 class="icon-postback icons icons--menu" data-section="postback"></i>Postback</a></li>
         </ul>
       </div>
@@ -41,13 +41,13 @@
     <main class="container-main col-xs-10 col-sm-11 col-md-9 col-lg-10">
       <nav class="navigation">
         <ul class="list list-icons">
-          <li class="list__element list__element--horizontal list__element--before"><a class="link--list"
+          <li class="list__element--horizontal list__element--before"><a class="link link--list"
               href="#"><i class="icon-wallet icons"></i>1500 $<i class="icon-arrow-down icons icons--small"></i></a></li>
-          <li class="list__element list__element--horizontal list__element--before"><a class="link--list" href="#"><i
+          <li class="list__element--horizontal list__element--before"><a class="link link--list" href="#"><i
                 class="icon-notification icons icons--after"></i></a></li>
-          <li class="list__element list__element--horizontal list__element--before"><a class="link--list" href="#"><i
+          <li class="list__element--horizontal list__element--before"><a class="link link--list" href="#"><i
                 class="icon-profile icons"></i>Leonardo Di Caprio</a></li>
-          <li class="list__element list__element--horizontal list__element--before"><a class="link--list" href="#"><i
+          <li class="list__element--horizontal list__element--before"><a class="link link--list" href="#"><i
                 class="icon-quit icons"></i></a></li>
         </ul>
       </nav>
@@ -292,35 +292,35 @@
           </div>
           <div class="row">
             <ul class="list list-number">
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#"><i
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number" href="#"><i
                     class="icon-arrow-left icons icons--small"></i></a></li>
               <li class="list__element list__element--horizontal list__element--hover list__element--active"><a
-                  class="link--list" href="#">1</a></li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+                  class="link link--number" href="#">1</a></li>
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">2</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">3</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">4</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">5</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">6</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">7</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">8</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">9</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#"><i
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number" href="#"><i
                     class="icon-arrow-right icons icons--small"></i></a></li>
             </ul>
           </div>
@@ -550,35 +550,35 @@
           </div>
           <div class="row">
             <ul class="list list-number">
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#"><i
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number" href="#"><i
                     class="icon-arrow-left icons icons--small"></i></a></li>
               <li class="list__element list__element--horizontal list__element--hover list__element--active"><a
-                  class="link--list" href="#">1</a></li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+                  class="link link--number" href="#">1</a></li>
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">2</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">3</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">4</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">5</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">6</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">7</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">8</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list"
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number"
                   href="#">9</a>
               </li>
-              <li class="list__element list__element--horizontal list__element--hover"><a class="link--list" href="#"><i
+              <li class="list__element list__element--horizontal list__element--hover"><a class="link link--number" href="#"><i
                     class="icon-arrow-right icons icons--small"></i></a></li>
             </ul>
           </div>
